Fix: Set initial background to transparent white to prevent first-run flickering

--- a/src/style.scss
+++ b/src/style.scss
@@ -74,7 +74,7 @@
     width: 100%;
     height: 100%;
     border-radius: 5px;
-    background: transparent;
+    background: rgba(255,255,255,0);
     border: 1px solid #00000031;
     box-shadow: none;
     z-index: 60;
